Création des classes, UML
Signed-off-by: Alexandre Perez <alexandre.perez92@gmail.com>

--- a/projetp1/.project
+++ b/projetp1/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>projetp1</name>
-	<comment></comment>
+	<name>projetp1_drop</name>
+	<comment>@key 32303037303533312D313030302070726F6A657470312F616C6578616E64722E706572657A </comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -10,8 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.soyatec.additional.Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>com.soyatec.additional.Nature</nature>
 	</natures>
 </projectDescription>
