--- a/projetp1/.project
+++ b/projetp1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>projetp1_drop</name>
+	<name>projetp1</name>
 	<comment>@key 32303037303533312D313030302070726F6A657470312F616C6578616E64722E706572657A </comment>
 	<projects>
 	</projects>
