--- a/projetp1/.classpath
+++ b/projetp1/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="lib/jssc.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jssc.jar" sourcepath="C:/Users/sebastie.vaucher/Downloads/jSSC-0.9.0-Release/src/jssc-0.9-source/src">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/sebastie.vaucher/Downloads/jSSC-0.9.0-Release/javadoc/jssc-0.9-javadoc.jar!/javadoc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/sqlitejdbc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
