--- a/projetp1/.classpath
+++ b/projetp1/.classpath
@@ -8,5 +8,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/sqlitejdbc.jar"/>
+	<classpathentry kind="lib" path="lib/flexjson.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
